<resources>
    <string name="app_name">SmartReminders</string>
    <string name="action_settings">Settings</string>
    <string name="url_root">http://192.168.1.9/WebServices/web/</string>
    <string name="logo_des">LogoDescription</string>
    <string name="login_label">Login</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_now_btn_label">Login Now</string>
    <string name="signup_now_label">Signup Now</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="plan_title">Plan title</string>
    <string name="plan_description">Description ..</string>
    <string name="email_address_hind">Email Address</string>
    <string name="password_for_account_hint">password for account</string>
    <string name="wrong_credentials">wrong credentials</string>
    <string name="sucessful_login">loading…</string>
    <string name="label_dismiss">Dismiss</string>
    <string name="label_connect_to_the_internet">Please connect to the internet</string>
    <string name="label_required">Please Specify </string>
    <string name="label_invalid_email">Invalid email</string>
    <string name="label_invalid_username">Invalid Username</string>
    <string name="label_invalid_number_range">Invalid number range</string>
    <string name="label_invalid_text_length">Invalid length</string>
    <string name="label_invalid_positive_number">Numbers must not be negative</string>
    <string name="label_not_available">Not available</string>
    <string name="label_not_available_abbr">N / A</string>
    <string name="invalid_date">Invalid date</string>
    <string name="label_enable_permissions_hint">You need to enable these permissions to use this app.</string>
    <string name="label_invalid_input_range">Expected length:</string>
    <string name="label_start_date_greater_than_today_error">Start date must be later than today</string>
    <string name="label_end_date_must_be_greater_than_start_date">End date must be greater than start date.</string>
    <string name="date_must_not_be_earlier_than_today">Date must not be earlier than today.</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="hostunreachable">Server is down</string>
    <string name="title_activity_main_frame">MainFrame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_subtitle">Rewind&amp;Remind</string>
    <string name="nav_header_desc">UserName</string>
    <string name="today__schedule">Today\'s Schedule</string>
    <string name="daily_plans">Daily Plans</string>
    <string name="tasks">Tasks</string>
    <string name="events_meetingss"><![CDATA[Events&Meetings]]></string>
    <string name="community">Community</string>
    <string name="share_your_tasks">Share your Tasks</string>
    <string name="browse_for_tasks">Browse For Tasks</string>
    <string name="nav_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment </string>
    <!-- END: Remove or change this placeholder text -->
    <string name="home_test">Home</string>
    <string name="daily_plans_test">Daily Plans</string>
    <string name="schedule_test">schedule</string>
    <string name="tasks_test">Tasks</string>
    <string name="events_meetings_test"><![CDATA[events & meetings]]></string>
    <string name="share_tasks_test">Share tasks</string>
    <string name="browse_tasks_test">Browse Tasks</string>
    <string name="settings_test">settings</string>
    <string name="vertical_form_stepper_form_continue">Continue</string>
    <string name="vertical_form_stepper_form_discard_question">Discard data?</string>
    <string name="vertical_form_stepper_form_info_will_be_lost">All the information you have given will be lost</string>
    <string name="vertical_form_stepper_form_discard_cancel">Cancel</string>
    <string name="vertical_form_stepper_form_discard">Discard</string>
    <string name="vertical_form_stepper_form_confirm_button">Confirm data</string>
    <string name="vertical_form_stepper_form_last_step">Confirmation</string>
    <string name="vertical_form_stepper_form_sending_data_message">Sending data…</string>
    <string name="vertical_form_stepper_form_current_step_uncompleted_alert">Please complete the current field before continue</string>
    <string name="vertical_form_stepper_form_down_previous">down_previous</string>
    <string name="vertical_form_stepper_form_down_next">down_next</string>
    <string name="add_alarm">Add New Alarm</string>
    <string name="new_alarm_added">New alarm added successfully</string>
    <string name="form_hint_title">Alarm title (required)</string>
    <string name="form_hint_description">Alarm description (optional)</string>
    <string name="error_title_min_characters">At least %1$d characters</string>
    <string name="main_activity_explanation">Click the button to try it!</string>
    <string name="main_activity_explanation_disclaimer">This app DOES NOT set up alarms for real!</string>
    <string-array name="steps_titles">
        <item>Title</item>
        <item>Description</item>
        <item>Time</item>
        <item>Week schedule</item>
    </string-array>
    <string-array name="steps_subtitles">
        <item>Title of the alarm</item>
        <item>Description of the alarm</item>
        <item>Time when the alarm will go off</item>
        <item>Week schedule of the alarm</item>
    </string-array>
    <string-array name="week_days">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

    <string name="plan_prompt">Choose a plan type</string>
    <string name="remind_prompt">Remind me on..</string>
    <string name="Trigger">trigger</string>
    <string-array name="plan_type">
        <item>Mute Phone</item>
        <item>Event</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="zones">Zones</string>
    <string name="todo">TODO</string>
    <string name="math_course_and_preparing_for_the_exam">Math course and preparing for the exam</string>
    <string name="_15_30_17_15">15:30-17:15</string>
    <string name="logout_action">logout</string>
    <string name="Profile">Profile</string>
    <string name="Mainmenu">Main Menu</string>

    <string name="sett_reminder_header">Set a Meeting Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you to make entiries of your expense</string>
    <string name="sett_start_reminder_time_label">Set Event Starting Time</string>
    <string name="sett_end_reminder_time_label">Set Event Ending Time</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>


</resources>
