<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/Mainmenu">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedules"
            android:title="@string/today__schedule" />
        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/daily_plan"
            android:title="@string/daily_plans" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/settings_2"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/upcoming_events"
            android:title="@string/events_meetingss" />
        <item
            android:id="@+id/nav_zones"
            android:icon="@drawable/ic_zone_pin"
            android:title="@string/zones" />
    </group>
    </item>

    <item android:title="@string/Profile">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout_action" />
        </menu>
    </item>


</menu>
